yaml/01/backend-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      name: backend
  replicas: 1 #副本数
  template:
    metadata:
      labels:
        name: backend
    spec:
      containers:
        - name: backend
          image: dweizhao/backend:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: 2G
            requests:
              cpu: 500m
              memory: 1G
